# avin-py

./: .gitignore  Makefile  README.md  justfile  main.py  pyproject.toml  requirements.txt
.github/badges/: coverage.json  loc.json  tests.json
.github/workflows/: badges.yml  loc.yml
architecture/: architecture.adoc  service_naming.adoc
avin/: __init__.py  config.py  exceptions.py  main.py  manager.py
avin/analytic/: __init__.py  _analytic.py  bar.py  posterior.py  tic_hist.py  trend.py  trend.py.bak  vawe.py  volume.py
avin/api/: __init__.py  data.py  loader.py
avin/asset/: __init__.py  asset.py  future.py  share.py
avin/cli/: main.py
avin/connect/: __init__.py  ti_to_av.py  tinkoff.py
avin/core/: __init__.py  asset.py  asset_list.py  bar.py  broker.py  category.py  chart.py  cluster.py  direction.py  elist.py  event.py  exchange.py  footprint.py  id.py  iid.py  indicator.py  instrument_code.py  ladder.py  level.py  market_data.py  move.py  operation.py  order.py  path_builder.py  quant.py  quantum.py  range.py  source.py  summary.py  tic.py  tick.py  tick_footprint.py  ticker.py  time_footprint.py  timeframe.py  trade.py  trend.py  value_footprint.py  vawe.py  volume_footprint.py
avin/data/: __init__.py  bar.py  bar_storage.py  bar_storge.py  cache_iid.py  convert_task.py  data_bar.py  data_manager.py  data_tic.py  data_type.py  iid_cache.py  iid_storage.py  instrument.py  market_data.py  schema.py  source.py  source_moex.py  source_tinkoff.py  tic.py  tic_storage.py
avin/domain/: tick.py  timeframe.py
avin/errors/: __init__.py  exceptions.py
avin/extra/: __init__.py  elist.py  extremum.py  extremum_list.py  move.py  size.py  term.py  trend.py  vawe.py
avin/extremum/: __init__.py  _extremum.py  elist.py  move.py  term.py  trend.py  vawe.py
avin/gui/: app.py  app_controller.py  app_state.py  events.py  main_window.py  messages.py  state.py  store.py
avin/keeper/: _keeper.py
avin/scaner/: scan.py
avin/script/: code.py  data.py  filtering_1.py  filtering_2.py  test-back-l.py  time_counter.py  trader.py
avin/service/: __init__.py  asset_data_service.py  asset_factory.py  asset_list_service.py  data_manager.py  data_service.py  footprint_builder.py  loader.py
avin/storage/: __init__.py  bar_storage.py  codec.py  data_manager.py  iid_storage.py  schema.py  tic_storage.py  tick_storage.py
avin/system/: __init__.py  conf.py  data_manifest.py  logger.py  path_builder.py
avin/terminal/: __init__.py  _terminal.py
avin/tester/: __init__.py  stream.py  tester.py  virtual_broker.py
avin/trader/: _trader.py  atinkoff.py  tinkoff.py
avin/utils/: __init__.py  alias.py  cmd.py  conf.py  const.py  dt.py  exceptions.py  logger.py  misc.py  timer.py  week_days.py
bench/: footprint_builder.py
dev/: .$signal.drawio.bkp  error.un  note.un  postgresql.un
dev/bak/: Plot.py  TinkoffDataFrame.py  _BarsDataFile.py  analytic_scheme.sql  cash.py  data_tinkoff.py.bak  gui MDI.py  gui.py  json.JSONEncoder.py  signal.py  strategy.py  test_keeper.py  ui_datainfo.py.bak  utils.py
dev/cython/: py.py  pyx.c  run.py  setup.py
dev/drawio/: .$all.drawio.bkp  .$architecture.drawio.bkp  .$avin.drawio.bkp  .$core.drawio.bkp  .$signal.drawio.bkp  avin.drawio
dev/example/: nautilus.sql
dev/pgmodeler/: ars_vincere.dbm
dev/thrash/: design.py  download.sh  figi_xx5.txt  problems.md
gpt/: ???.adoc  README.md
gpt/actual/: about_me.adoc  memory.adoc  project_instructions.adoc  user_instructions.adoc
gpt/context/: goal.adoc
gpt/decisions/: gpt_dir.adoc
gpt/power_user/: POWER_USER.adoc
gpt/promts/: conference.adoc  meeting.adoc
gui/asset/: widget.py
gui/broker/: __init__.py  item.py  thread.py  tree.py  widget.py
note/: GPT.adoc  architecture.adoc  devops.adoc  gui brief.adoc  howto_chatgpt.adoc  later.adoc  plan.adoc  service_naming.adoc  think.adoc  tmp  todo.adoc
res/: config.toml  data.toml
scripts/: doctor.py
tests/: bar_test.py  cmd_test.py  exchange_test.py  factories.py  iid_test.py  log_test.py  manager_test.py  market_data_test.py  misc_test.py  range_test.py  test_core.py  test_data.py  test_extra.py  test_tester.py  test_utils.py
usr/: note.un
(+272 files in other folders)
