[project]
name = "avin"
version = "0.1.0"
description = "Trade system"
authors = [{name = "Alex Avin", email = "mr.alexavin@gmail.com"}]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.14"

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
pythonpath = ["."]
testpaths = [ "./tests", ]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::pytest.PytestCollectionWarning",
    ]
asyncio_mode="auto"
asyncio_default_fixture_loop_scope="session"
markers = [
    "integration: integration tests",
]
