# ============================================================================
# URL:          http://avin.info
# AUTHOR:       Alex Avin
# E-MAIL:       mr.alexavin@gmail.com
# LICENSE:      MIT
# ============================================================================

[project]
name = "avin"
version = "2.0.0"
description = "Trade system"
authors = [{name = "Alex Avin", email = "mr.alexavin@gmail.com"}]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.14"
dependencies = [
    "polars[rtcompat]",
    "pyqt6==6.11.0",
    "requests",
    "tomli-w",
]

[project.scripts]
avin-gui = "avin.gui.app:run"

[project.optional-dependencies]
dev = [
    "mypy",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
]
tinkoff = [
    "t_tech",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
pythonpath = ["."]
testpaths = [ "./tests", ]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::pytest.PytestCollectionWarning",
    ]
asyncio_mode="auto"
asyncio_default_fixture_loop_scope="session"
markers = [
    "integration: integration tests",
    "slow: very slowly tests",
]

[tool.setuptools.packages.find]
include = ["avin", "avin.*"]
exclude = ["tests", "tests.*", "res", "usr"]

[tool.distutils.egg_info]
egg_base = ".cache"
