# ────────────────────────────────────────────────────────────────────────────
#  AVIN
#  Understand the market before trading it.
#
#  https://avin.info
# ────────────────────────────────────────────────────────────────────────────

[project]
name = "avin"
version = "2.0.0"
description = "Analytical trading platform. Data. Research. Execution."
authors = [{name = "Alex Avin", email = "mr.alexavin@gmail.com"}]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "polars[rtcompat]",
    "PyQt6==6.11.0",
    "requests",
    "tomli-w",
]

[project.urls]
Homepage = "http://avin.info"
Repository = "https://github.com/arsvincere/avin-prototype"

[project.scripts]
avin-gui = "avin.gui.app:run"

[project.optional-dependencies]
dev = [
    "mypy",
    "pytest",
    "pytest-asyncio",
    "pytest-cov>=7.1.0",
    "ruff",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.mypy]
python_version = "3.13"
files = ["avin"]
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
no_implicit_optional = true
strict_equality = true
namespace_packages = false
show_error_codes = true
pretty = true

[tool.ruff]
target-version = "py313"
line-length = 78
src = ["avin", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope="session"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "integration: integration tests",
    "slow: slow tests",
    "smoke: fast vertical sanity checks",
]
filterwarnings = [
    "ignore:.*figi is deprecated:DeprecationWarning",
]

[tool.setuptools.packages.find]
include = ["avin", "avin.*"]
exclude = ["tests", "tests.*", "res", "usr"]

[tool.distutils.egg_info]
egg_base = ".cache"
